using copy instead of clone, part II